--- a/index.html
+++ b/index.html
@@ -291,14 +291,14 @@ gtag('config', 'G-H1JW8YBDZ8');
 
 <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 110px 15px 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="text-align: center; margin-bottom: 25px; padding-top: 15px;">
+<div style="text-align: center; margin-bottom: 25px; padding-top: 15px;">
   <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase; line-height: 1.1;">
-  JOSHUA HONG
-</h1>
-    <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600; letter-spacing: 2px;">
-      UTSA MEN'S GOLF | FRESHMAN
-    </p>
-  </div>
+    JOSHUA HONG
+  </h1>
+  <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600; letter-spacing: 2px;">
+    UTSA MEN'S GOLF | <span style="color: #0c2340; font-weight: 800;">FRESHMAN</span>
+  </p>
+</div>
 
 <div style="margin-bottom: 20px; border-radius: 20px; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.15); background-color: #f8f8f8; position: relative;">
     <a href="https://drive.google.com/uc?export=view&id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI" target="_blank" style="display:block; text-decoration: none;">
