--- a/code/ncaa-ongoing.html
+++ b/code/ncaa-ongoing.html
@@ -615,15 +615,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="color: #bdc3c7;">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="color: #bdc3c7;">-</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; style="color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; style="color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value style="font-weight: bold; style="color: #0c2340;">-</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
         </tr>
 
       <tr>
@@ -649,15 +649,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold;">TBD-</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; style="color: #0c2340;">TBD</td>
         </tr>
 
         <tr>
@@ -683,15 +683,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          <td class="hide-mobile" style="font-weight: bold;" style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold;" style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold;" style="color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold;" style="color: #0c2340;">TBD</td>
         </tr>
       </tbody>
     </table>
@@ -721,17 +721,17 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">TBD</span>
     </div>
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">TBD</span>
     </div>
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Rank</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">TBD</span>
     </div>
 
   </div>
