--- a/index.html
+++ b/index.html
@@ -950,20 +950,15 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           </div>
           <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 20px; text-align: left;">
             <p style="margin: 0 0 10px 0; color: #c98a2e; font-weight: 700; font-size: 16px;">Military City Collegiate — San Antonio, Texas</p>
-            <p style="margin-bottom: 10px;">
-              Temperature declined prior to competition. Round 1 was delayed approximately one hour due to frost. **Wind gusts approached 40 km/h**. Course setup at **TPC San Antonio — The Canyons Course (Par 72, 7,106 yards)** reflected PGA-level yardage, green speed, and pin positioning.<br>
-              **Round 1: 69 (−3), lead.** Field average: 76.16.<br><br>
-              **Round 2: Even Par.** Cumulative −3, second position.<br><br>
-              **Round 3: Field average 79.03** under elevated wind and firm setup. Tournament concluded at **−1**.<br>
-              **Result**<br>
-              **Individual Champion**<br>
-              **Team Champion**<br>
-              **Only player under par**<br><br>
-              Driver and long-iron dispersion remained stable under wind. Proximity variance observed under crosswind. Greenside execution functional. Putting adaptation variance noted under tournament-speed greens.<br><br>
-              Post-event review of **Clippd and WAGR metrics** indicated narrower ranking differential relative to elevated field scoring conditions.<br><br>
-              Preparation shifts to **Golden Nugget Invitational**. Academic obligations addressed midweek.
-            </p>
-            <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Technical calibration remains focused on tournament continuity.</p>
+<p style="margin-bottom: 10px;">
+  Temperature declined prior to competition, and Round 1 was delayed approximately one hour due to frost. <b>Wind gusts approached 40 km/h</b> throughout the event. The course at <b>TPC San Antonio — The Canyons Course (Par 72, 7,106 yards)</b> was set at <b>PGA-level yardage, green speed, and pin positioning.</b><br><br>
+  <b>Round 1 concluded at 69 (−3)</b>, establishing the lead. The <b>field scoring average was 76.16</b>. <b>Round 2 concluded at Even Par</b>, moving to <b>−3 cumulative and second position</b> entering the final round. <b>Round 3</b> was played under continued wind and firm conditions, with the <b>field scoring average rising to 79.03</b>. The tournament concluded at <b>−1</b>.<br><br>
+  Joshua finished as <b>Individual Champion</b> and contributed to the <b>Team Championship</b> as the <b>only player under par</b>.<br><br>
+  National ranking adjusted from <b>No. 406 to No. 354 (▲52)</b>.<br><br>
+  <b>Driver and long-iron dispersion</b> remained stable relative to wind exposure. Minor <b>proximity variance</b> was observed under crosswind conditions. <b>Greenside execution</b> remained functional. <b>Putting adaptation variance</b> was noted under tournament-speed greens.<br><br>
+  Post-event review of <b>Clippd and WAGR metrics</b> indicated a narrower ranking differential relative to observed field scoring dispersion. Preparation transitions to <b>Golden Nugget Invitational</b>, with midweek allocated to academic completion and technical calibration.
+</p>
+<p style="margin-bottom: 0; color: #fff; font-weight: 600;">Technical calibration remains focused on tournament continuity.</p>
           </div>
         </div>
         <div style="text-align: right; font-size: 11px; color: #555; font-weight: 700; margin-top: 20px;">Posted On: Feb 25, 2026</div>
