--- a/code/index-ongoing-final.html
+++ b/code/index-ongoing-final.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -951,7 +950,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 20px; text-align: left;">
             <p style="margin: 0 0 10px 0; color: #c98a2e; font-weight: 700; font-size: 16px;">Military City Collegiate — San Antonio, Texas</p>
 <p style="margin-bottom: 10px;">
-  Temperature declined prior to competition, and Round 1 was delayed approximately one hour due to frost. <b>Wind gusts approached 40 km/h</b> throughout the event. The course at <b>TPC San Antonio — The Canyons Course (Par 72, 7,106 yards)</b> was set at <b>PGA-level yardage, green speed, and pin positioning.</b><br><br>
+  Temperature declined prior to competition, and Round 1 was delayed approximately one hour due to frost. <b>Wind gusts approached 25 mph</b> throughout the event. The course at <b>TPC San Antonio — The Canyons Course (Par 72, 7,106 yards)</b> was set at <b>PGA-level yardage, green speed, and pin positioning.</b><br><br>
   <b>Round 1 concluded at 69 (−3)</b>, establishing the lead. The <b>field scoring average was 76.16</b>. <b>Round 2 concluded at Even Par</b>, moving to <b>−3 cumulative and second position</b> entering the final round. <b>Round 3</b> was played under continued wind and firm conditions, with the <b>field scoring average rising to 79.03</b>. The tournament concluded at <b>−1</b>.<br><br>
   Joshua finished as <b>Individual Champion</b> and contributed to the <b>Team Championship</b> as the <b>only player under par</b>.<br><br>
   National ranking adjusted from <b>No. 406 to No. 354 (▲52)</b>.<br><br>
